# LimeBot

./: .env.dev  README.md  bot.py  data.db  pyproject.toml
accounts/3090839937/: config.yml  device.json  session.token
accounts/3090839937/data/: image.db  video.db
accounts/3090839937/data/leveldb-v2/: 000092.ldb  000093.ldb  000096.ldb  000118.ldb  000708.ldb  LOG  MANIFEST-000098  MANIFEST-000126  MANIFEST-000716
accounts/3090839937/data/voices/: 0E471818-8DAE-3381-108A-E330AE6A0AC7.amr  110D4CAB80F53B2F1FA45DC1AEAE6BA4.amr
accounts/3090839937/dumps/: 1655050960.dump
accounts/778571299/: config.yml  device.json  session.token
accounts/778571299/data/: image.db
accounts/778571299/data/leveldb-v2/: LOG
accounts/binary/: accounts.pkl
data/: data.sqlite3
data/limeliset_group_manager/grouplist/: 188937258.json  371276134.json  599342554.json  726031097.json
lbot/e/bot_text1/: __init__.py
lbot/plugins/: bilibili.py  eatWhat.py  group_ban_on_word.py  group_join_check.py  group_special_title.py  heartrate.py
lbot/plugins/disable/: group_luckey_test.py  heartrate.py.old  heartrate_async.py
lbot/plugins/disable/limelisest_group_manager/: Base_v2.py  __init__.py
lbot/plugins/limelisest_group_manager/: Base.py  Base_v2.py  Base_v3.py  __init__.py
