[tool.poetry]
name = "lbot"
version = "0.1.0"
description = "lbot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["haruka_bot", "nonebot_plugin_gocqhttp", "nonebot_plugin_bilibilibot", "nonebot_plugin_mqtt", "nonebot_plugin_apscheduler"]
plugin_dirs = ["lbot/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
